add minecart translation & code cleanup