@@ -12,7 +12,7 @@ import org.pmw.tinylog.Logger;
 import java.util.List;
 
 public class PacketEncoder extends MessageToMessageEncoder {
-    private Server server;
+    private final Server server;
 
     PacketEncoder(Server server) {
         this.server = server;
@@ -21,11 +21,10 @@ public class PacketEncoder extends MessageToMessageEncoder {
     @SuppressWarnings("unchecked")
     @Override
     protected void encode(ChannelHandlerContext ctx, Object message, List out) throws Exception {
-        if (message instanceof Packet) {
-            Packet packet = (Packet) message;
+        if (message instanceof Packet packet) {
             Class<? extends Packet> clazz = packet.getClass();
 
-            AbstractPacket abstractPacket = (AbstractPacket) packet.getPacketClass().newInstance();
+            AbstractPacket abstractPacket = (AbstractPacket) packet.getPacketClass().getDeclaredConstructor().newInstance();
 
             if (server.isDebugMode()) {
                 Logger.info("sending {} packet", clazz.getSimpleName());
